--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
   </header>
 
   <div id="top-container">
-    <h1>Encontre o emprego dos seus sonhos</h1>
-    <p>Somos o site com mais vagas de tecnologia do Brasil, direcionadas a home office</p>
-
-    <form action="" id="search-form" class="form">
-      <div class="form-item">
-        <input type="text" placeholder="Digite a vaga que está buscando...">
-      </div>
-      <div class="form-item">
-        <button type="submit" >Procurar</button>
-      </div>
-    </form>
+    <div class="container">
+      <h1>Encontre o emprego dos seus sonhos</h1>
+      <p>Somos o site com mais vagas de tecnologia do Brasil, direcionadas a home office</p>
+  
+      <form action="" id="search-form" class="form">
+        <div class="form-item">
+          <input type="text" placeholder="Digite a vaga que está buscando...">
+        </div>
+        <div class="form-item">
+          <button type="submit" >Procurar</button>
+        </div>
+      </form>
+    </div>
   </div>
 
   <main>
@@ -44,27 +46,45 @@
       <div class="container">
         <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
         <ul id="job-list">
-          <li class="new-job">
-            <img src="https://via.placeholder.com/400x300" alt="">
-            <p>Empresa</p>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
             <h2>Título da vaga</h2>
-            <p>R$ 2000,00</p>
+            <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
             <a href="">Ver vaga</a>
           </li>
-          <li class="new-job">
-            <img src="https://via.placeholder.com/400x300" alt="">
-            <p>Empresa</p>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
             <h2>Título da vaga</h2>
-            <p>R$ 2000,00</p>
+            <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
             <a href="">Ver vaga</a>
           </li>
-          <li class="new-job">
-            <img src="https://via.placeholder.com/400x300" alt="">
-            <p>Empresa</p>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
             <h2>Título da vaga</h2>
-            <p>R$ 2000,00</p>
+            <p>Salário: R$ 2000,00</p>
+            <span class="new-job-label">Nova</span>
+            <a href="">Ver vaga</a>
+          </li>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
+            <h2>Título da vaga</h2>
+            <p>Salário: R$ 2000,00</p>
+            <span class="new-job-label">Nova</span>
+            <a href="">Ver vaga</a>
+          </li>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
+            <h2>Título da vaga</h2>
+            <p>Salário: R$ 2000,00</p>
+            <span class="new-job-label">Nova</span>
+            <a href="">Ver vaga</a>
+          </li>
+          <li class="job-list-item new-job">
+            <h3>Empresa</h3>
+            <h2>Título da vaga</h2>
+            <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
             <a href="">Ver vaga</a>
           </li>
