finalizando estilos e add handlebars

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <input type="text" placeholder="Digite a vaga que está buscando...">
         </div>
         <div class="form-item">
-          <button type="submit" >Procurar</button>
+          <button type="submit" class="btn-primary">Procurar</button>
         </div>
       </form>
     </div>
@@ -51,42 +51,42 @@
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
           <li class="job-list-item new-job">
             <h3>Empresa</h3>
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
           <li class="job-list-item new-job">
             <h3>Empresa</h3>
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
           <li class="job-list-item new-job">
             <h3>Empresa</h3>
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
           <li class="job-list-item new-job">
             <h3>Empresa</h3>
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
           <li class="job-list-item new-job">
             <h3>Empresa</h3>
             <h2>Título da vaga</h2>
             <p>Salário: R$ 2000,00</p>
             <span class="new-job-label">Nova</span>
-            <a href="">Ver vaga</a>
+            <a href="" class="btn-primary">Ver vaga</a>
           </li>
         </ul>
       </div>
